Batch catalog module improvements calculator ui in schedule,reports charts design alignment,ui upgrade